--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -39,12 +39,15 @@
     "Neighborhood": "Bairro",
     "City": "Cidade",
     "State": "Estado",
+    "Price": "Preço",
     "Is Admin": "É Administrador",
     "Action": "Ação",
     "Users": "Usuários",
     "Addresses": "Endereços",
     "Categories": "Categorias",
     "Variations": "Variações",
+    "Product Items": "Ingredientes",
+    "Products": "Produtos",
     "Show Data": "Mostrar Dados",
     "Edit Data": "Alterar Dados",
     "Add New": "Adicionar Novo",
