improve layout, initialized order module

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -1,6 +1,6 @@
 {
     "Name": "Nome",
-    "E-Mail Address": "Email",
+    "E-Mail Address": "E-mail",
     "Password": "Senha",
     "Confirm Password": "Confirmação de senha",
     "Remember Me": "Manter conectado",
@@ -10,10 +10,10 @@
     "Home": "Principal",
     "Logout": "Sair",
     "Toggle navigation": "Alternar navegação",
-    "Verify Your Email Address": "Verifique seu endereço de email",
-    "A fresh verification link has been sent to your email address.": "Um novo link de verificação foi enviado para seu email",
-    "Before proceeding, please check your email for a verification link.": "Antes de prosseguir, por favor, veja se recebeu o link de verificação em seu email",
-    "If you did not receive the email": "Se você não recebeu o email",
+    "Verify Your Email Address": "Verifique seu endereço de e-mail",
+    "A fresh verification link has been sent to your email address.": "Um novo link de verificação foi enviado para seu e-mail",
+    "Before proceeding, please check your email for a verification link.": "Antes de prosseguir, por favor, veja se recebeu o link de verificação em seu e-mail",
+    "If you did not receive the email": "Se você não recebeu o e-mail",
     "click here to request another": "clique aqui para solicitar outro",
     "Please click the button below to verify your email address.": "Clique no botão abaixo para verificar seu endereço de e-mail",
     "Verify Email Address": "Verificar E-mail",
@@ -40,7 +40,6 @@
     "City": "Cidade",
     "State": "Estado",
     "Price": "Preço",
-    "Is Admin": "É Administrador",
     "Action": "Ação",
     "Users": "Usuários",
     "Addresses": "Endereços",
@@ -48,6 +47,8 @@
     "Variations": "Variações",
     "Product Items": "Ingredientes",
     "Products": "Produtos",
+    "Transactions": "Transações",
+    "Orders": "Pedidos",
     "Show Data": "Mostrar Dados",
     "Edit Data": "Alterar Dados",
     "Add New": "Adicionar Novo",
@@ -62,7 +63,14 @@
     "Edit": "Alterar",
     "Delete": "Remover",
     "Back": "Voltar",
-    "Admin": "Administrador",
-    "Customer": "Cliente",
-    "Category": "Categoria"
+    "Category": "Categoria",
+    "pending": "pendente",
+    "processing": "processando",
+    "canceled": "cancelado",
+    "complete": "completo",
+    "withdrawal": "retirada",
+    "sale": "venda",
+    "admin": "administrador",
+    "customer": "cliente",
+    "deliveryman": "entregador"
 }
