--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -41,11 +41,13 @@
     "State": "Estado",
     "Price": "Preço",
     "Action": "Ação",
+    "Pieces": "Divido Em",
     "Users": "Usuários",
     "Addresses": "Endereços",
     "Categories": "Categorias",
+    "Variation": "Opção",
     "Variations": "Variações",
-    "Product Items": "Ingredientes",
+    "Variation Items": "Ingredientes",
     "Products": "Produtos",
     "Transactions": "Transações",
     "Orders": "Pedidos",
@@ -54,6 +56,7 @@
     "Add New": "Adicionar Novo",
     "Yes": "Sim",
     "No": "Não",
+    "Add": "Comprar",
     "Are You sure want to delete?": "Você tem certeza que deseja remover?",
     "Entity updated successfully.": "Dados atualizados com sucesso.",
     "Entity saved successfully.": "Dados salvos com sucesso.",
