Order Create Process

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -51,6 +51,7 @@
     "Products": "Produtos",
     "Transactions": "Transações",
     "Orders": "Pedidos",
+    "Observation": "Observação",
     "Show Data": "Mostrar Dados",
     "Edit Data": "Alterar Dados",
     "Add New": "Adicionar Novo",
@@ -63,6 +64,7 @@
     "Entity saved successfully.": "Dados salvos com sucesso.",
     "Entity successfully deleted.": "Dados excluídos com sucesso.",
     "Entity cannot be deleted.": "Dados não foram excluídos.",
+    "Attention": "Atenção",
     "Show": "Mostrar",
     "Edit": "Alterar",
     "Delete": "Remover",
@@ -83,10 +85,21 @@
     "Shopping Cart": "Carrinho",
     "Discount": "Desconto",
     "Apply": "Aplicar",
+    "Shipping Amount": "Frete",
+    "Deliveryman": "Entregador",
+    "Method": "Forma Pag.",
+    "Client": "Cliente",
+    "Cash Amount": "Dinheiro",
+    "Back Change": "Troco",
+    "Created At": "Criado em",
+    "Updated At": "Atualizado em",
     "Couldn't add item": "Não foi possivel adicionar o item",
     "has been added to the cart.": "foi adicionado ao carrinho.",
     "has been removed from the cart.": "foi removido do carrinho.",
     "The item could not be removed from the cart.": "Não foi possível remover o item do carrinho.",
-    "The discount could not be applied.": "Não foi possivel aplicar o desconto.",
-    "cart empty": "carrinho vazio"
+    "The discount could not be applied.": "Não foi possível aplicar o desconto.",
+    "It was not possible to calculate change.": "Não foi possível calcular o troco.",
+    "cart empty": "carrinho vazio",
+    "Pick Up in Store": "Retirar na loja",
+    "Save Order": "Salvar Pedido"
 }
