List Order and Change Order Status

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -73,7 +73,8 @@
     "pending": "pendente",
     "processing": "processando",
     "canceled": "cancelado",
-    "complete": "completo",
+    "complete": "entregue",
+    "delivery": "a caminho",
     "withdrawal": "retirada",
     "sale": "venda",
     "admin": "administrador",
@@ -99,6 +100,11 @@
     "The item could not be removed from the cart.": "Não foi possível remover o item do carrinho.",
     "The discount could not be applied.": "Não foi possível aplicar o desconto.",
     "It was not possible to calculate change.": "Não foi possível calcular o troco.",
+    "The order has been canceled.": "O pedido foi cancelado.",
+    "The order is pending delivery.": "O pedido está a caminho.",
+    "The order being produced.": "O pedido que está sendo produzido.",
+    "The order has been completed.": "O pedido foi entregue.",
+    "Are you sure you want to change the status to": "Tem certeza de que deseja alterar o status para",
     "cart empty": "carrinho vazio",
     "Pick Up in Store": "Retirar na loja",
     "Save Order": "Salvar Pedido"
