Finish order process, create report module

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -51,6 +51,7 @@
     "Products": "Produtos",
     "Transactions": "Transações",
     "Orders": "Pedidos",
+    "Order": "Pedido",
     "Observation": "Observação",
     "Show Data": "Mostrar Dados",
     "Edit Data": "Alterar Dados",
@@ -82,18 +83,24 @@
     "deliveryman": "entregador",
     "credit card": "cartão de crédito",
     "in cash": "em dinheiro",
+    "debit card": "cartão de débito",
+    "food voucher": "vale alimentação",
+    "meal ticket": "vale refeição",
     "subsidized": "bonificado",
     "Shopping Cart": "Carrinho",
     "Discount": "Desconto",
     "Apply": "Aplicar",
     "Shipping Amount": "Frete",
     "Deliveryman": "Entregador",
-    "Method": "Forma Pag.",
+    "Payment Method": "Forma Pagamento",
+    "Payment": "Pagamento",
     "Client": "Cliente",
+    "Reports": "Relatórios",
     "Cash Amount": "Dinheiro",
     "Back Change": "Troco",
-    "Created At": "Criado em",
-    "Updated At": "Atualizado em",
+    "Print": "Imprimir",
+    "Created At": "Data Registro",
+    "Updated At": "Data Atualização",
     "Couldn't add item": "Não foi possivel adicionar o item",
     "has been added to the cart.": "foi adicionado ao carrinho.",
     "has been removed from the cart.": "foi removido do carrinho.",
@@ -112,5 +119,29 @@
     "Address": "Endereço",
     "Waiting Time": "Tempo de Espera",
     "Select an address.": "Selecione um endereço.",
-    "Is Open": "Está Aberto"
+    "Is Open": "Está Aberto",
+    "start": "inicio",
+    "end": "fim",
+    "status": "situação",
+    "payment_method": "forma de pagamento",
+    "subtotal": "subtotal",
+    "total": "total",
+    "discount": "desconto",
+    "shipping_amount": "frete",
+    "cash_amount": "dinheiro",
+    "back_change": "troco",
+    "customer_name": "nome do cliente",
+    "customer_telephone": "telefone do cliente",
+    "deliveryman_name": "nome do entregador",
+    "deliveryman_telephone": "telefone do entregador",
+    "address_zipcode": "cep do endereço",
+    "address_street": "rua do endereço",
+    "address_number": "número do endereço",
+    "address_city": "cidade do endereço",
+    "address_state": "estado do endereço",
+    "address_neighborhood": "bairro do endereço",
+    "address_complement": "complemento do endereço",
+    "type": "tipo",
+    "value": "valor",
+    "description": "descrição"
 }
