new order attr to determine how late it is

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -99,6 +99,8 @@
     "Cash Amount": "Dinheiro",
     "Back Change": "Troco",
     "Print": "Imprimir",
+    "Is Delayed": "Atrasado",
+    "Expected At": "Data Previsão",
     "Created At": "Data Registro",
     "Updated At": "Data Atualização",
     "Couldn't add item": "Não foi possivel adicionar o item",
