improve form user and address

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -17,7 +17,7 @@
     "click here to request another": "clique aqui para solicitar outro",
     "Please click the button below to verify your email address.": "Clique no botão abaixo para verificar seu endereço de e-mail",
     "Verify Email Address": "Verificar E-mail",
-    "If you did not create an account, no further action is required." : "Se você não criou a conta, favor desconsiderar este e-mail",
+    "If you did not create an account, no further action is required.": "Se você não criou a conta, favor desconsiderar este e-mail",
     "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Se você estiver com problemas para clicar no botão \":actionText\", copie e cole o URL abaixo\nem seu navegador da web:",
     "Send Password Reset Link": "Enviar link para redifinir senha",
     "Reset Password": "Modificar Senha",
@@ -33,7 +33,7 @@
     "Close": "Fechar",
     "Profile": "Perfil",
     "Zip Code": "Cep",
-    "Street": "Logradouro",
+    "Street": "Rua",
     "Number": "Número",
     "Complement": "Complemento",
     "Neighborhood": "Bairro",
@@ -127,7 +127,8 @@
     "status": "situação",
     "payment_method": "forma de pagamento",
     "subtotal": "subtotal",
-    "total": "total",
+    "additional_amount": "valor adicional",
+    "amount": "total",
     "discount": "desconto",
     "shipping_amount": "frete",
     "cash_amount": "dinheiro",
@@ -145,5 +146,10 @@
     "address_complement": "complemento do endereço",
     "type": "tipo",
     "value": "valor",
-    "description": "descrição"
+    "description": "descrição",
+    "No Email": "Sem E-mail",
+    "No Address": "Sem Endereço",
+    "Search Address on Google Maps": "Pesquisar Endereço no Google Maps",
+    "Zip Code not found.": "Cep não encontrado.",
+    "Invalid Zip Code.": "Cep inválido"
 }
