--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -42,6 +42,7 @@
     "Price": "Preço",
     "Action": "Ação",
     "Pieces": "Divido Em",
+    "Items": "Ingredientes",
     "Users": "Usuários",
     "Addresses": "Endereços",
     "Categories": "Categorias",
@@ -128,6 +129,8 @@
     "payment_method": "forma de pagamento",
     "subtotal": "subtotal",
     "additional_amount": "valor adicional",
+    "Additional Amount": "Valor Adicional",
+    "Amount": "Total",
     "amount": "total",
     "discount": "desconto",
     "shipping_amount": "frete",
