new feature send whatsapp msg to deliveryman

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -156,6 +156,7 @@
     "Zip Code not found.": "Cep não encontrado.",
     "Invalid Zip Code.": "Cep inválido",
     "Last :countDays Days": "Últimos :countDays Dias",
+    "Sales": "Vendas",
     "Orders Placed": "Pedidos",
     "Avg Value": "Valor Médio",
     "Conversion Rate": "Taxa de Conversão"
