new feature calculate distance from user's address to company

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -161,5 +161,7 @@
     "Avg Value": "Valor Médio",
     "Conversion Rate": "Taxa de Conversão",
     "Shipping Tax": "Taxa do Frete",
-    "Free Distance": "Distância Grátis"
+    "Free Distance": "Distância Grátis",
+    "Updated Order List": "Lista de Pedidos Atualizada",
+    "Distance": "Distância"
 }
