fix translate shipping tax

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -165,7 +165,7 @@
     "Updated Order List": "Lista de Pedidos Atualizada",
     "Distance": "Distância",
     "Duration": "Duração",
-    "Shipping Tax Added (distance :distance km)": "Shipping Tax Added (distance :distance km)",
+    "Shipping Tax Added (distance :distance km)": "Frete adicionado (distância :distance km)",
     "Distance in km.": "Distância em km.",
     "Time in minutes.": "Tempo em minutos."
 }
