update address examples

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -84,6 +84,7 @@
     "deliveryman": "entregador",
     "credit card": "cartão de crédito",
     "in cash": "em dinheiro",
+    "paid at the bakery": "pago na padaria",
     "debit card": "cartão de débito",
     "food voucher": "vale alimentação",
     "meal ticket": "vale refeição",
